# C-Cmake_MVSDK_SetIP

./: README.md
SetCameraIP/: CMakeCache.txt  CMakeLists.txt  Makefile  SetCameraIP  SetIP.cpp  cmake_install.cmake
